IS/SR #bugfix slightly increased height of conference-title and conference-link slightly to avoid low characters (like g or p) being cut off.

--- a/src/less/conferences.less
+++ b/src/less/conferences.less
@@ -106,7 +106,7 @@
   .conference-title {
     display: block; /* Fallback for non-webkit */
     display: -webkit-box;
-    height: 20px; /* Fallback for non-webkit */
+    height: 22px; /* Fallback for non-webkit */
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
@@ -115,7 +115,7 @@
   
   .conference-link {
     overflow: hidden;
-    height: 15px;
+    height: 16px;
   }
   
   .conference-dates {
